// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Map Renderer Map correctly 1`] = `
<section
  className="map property__map"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div />
</section>
`;

exports[`Render Map Renderer Map correctly with current 1`] = `
<section
  className="map cities__map"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div />
</section>
`;
